Add link statistics and descriptive plots

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -60,10 +60,13 @@
    "source": [
     "loop_numnode_bound = 30  # From 30 it starts getting slow\n",
     "faceloop_limit = [15000,30000]  # 90% of face loop lengths should conform to these length limits [m]\n",
+    "link_limit = [1000,5000,10000] # Optimal length between first and second value, maximal length the last value\n",
+    "maxslope_limit = 6\n",
     "\n",
     "PATH = {\n",
     "    \"data_in\": \"../data/input/faxe/network/\",\n",
-    "    \"data_out\": \"../data/processed/faxe/\"\n",
+    "    \"data_out\": \"../data/processed/faxe/\",\n",
+    "    \"plot\": \"../plots/faxe/\"\n",
     "}"
    ]
   },
@@ -437,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26aeda72",
+   "id": "0c4bc2c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,11 +456,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1f72413",
+   "id": "bd00d12d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=6, edge_color=edge_colors)\n",
+    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=7, edge_color=edge_colors)\n",
     "plt.text(0,0.04, \"Longest face loop highlighted: \" + str(int(loopbasis[max(loopbasis.keys())][\"length\"]/1000)) + \"km\");\n",
     "plt.tight_layout()"
    ]
@@ -508,18 +511,6 @@
    "outputs": [],
    "source": [
     "Gnx = G.to_networkx()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90bb6350",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Sanity checks\n",
-    "# for (u, v, wt) in Gnx.edges.data('max_slope'):\n",
-    "#     print(f\"({u}, {v}, {wt})\")"
    ]
   },
   {
@@ -598,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26228430",
+   "id": "b16df803",
    "metadata": {},
    "source": [
     "## Descriptive network statistics"
@@ -606,15 +597,54 @@
   },
   {
    "cell_type": "markdown",
-   "id": "317f7cd3",
+   "id": "7176d2b1",
    "metadata": {},
    "source": [
-    "### Link lengths"
+    "### Link lengths and max slopes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "225563eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linklengths = [e[\"weight\"] for e in G.es]\n",
+    "linkmaxslopes = [e[\"max_slope\"] for e in G.es]\n",
+    "fig = plt.figure(figsize=(8, 3))\n",
+    "axes1 = fig.add_axes([0.08, 0.16, 0.4, 0.75])\n",
+    "axes2 = fig.add_axes([0.58, 0.16, 0.4, 0.75])\n",
+    "\n",
+    "histxy = axes1.hist(linklengths, density=False)\n",
+    "axes1.plot([link_limit[0],link_limit[0]], [0,max(histxy[0])], \":k\")\n",
+    "axes1.plot([link_limit[1],link_limit[1]], [0,max(histxy[0])], \":k\")\n",
+    "axes1.plot([link_limit[2],link_limit[2]], [0,max(histxy[0])], \":r\")\n",
+    "indcond = [i for i,x in enumerate(linklengths) if (x >= link_limit[0] and x <= link_limit[1])]\n",
+    "massinallowedrange = round(len(indcond)/len(linklengths)*100) # Should be high\n",
+    "axes1.text((link_limit[0]+link_limit[1])/2, max(histxy[0]), str(massinallowedrange) + \"%\", horizontalalignment='center', verticalalignment='top')\n",
+    "axes1.text(link_limit[0]*0.9, max(histxy[0]), str(round(len([i for i,x in enumerate(linklengths) if (x <= link_limit[0])])/len(linklengths)*100)) + \"%\", horizontalalignment='right', verticalalignment='top')\n",
+    "axes1.text((link_limit[1]+link_limit[2])/2, max(histxy[0]), str(round(len([i for i,x in enumerate(linklengths) if (x >= link_limit[1] and x <= link_limit[2])])/len(linklengths)*100)) + \"%\", horizontalalignment='center', verticalalignment='top')\n",
+    "axes1.text(link_limit[2]*1.01, max(histxy[0]), str(round(len([i for i,x in enumerate(linklengths) if (x > link_limit[2])])/len(linklengths)*100)) + \"%\", horizontalalignment='left', verticalalignment='top', color=\"red\")\n",
+    "\n",
+    "axes1.set_xlabel('Length [m]')\n",
+    "axes1.set_ylabel('Frequency')\n",
+    "axes1.set_title('Link lengths')\n",
+    "\n",
+    "histxy = axes2.hist(linkmaxslopes, density=False)\n",
+    "axes2.plot([maxslope_limit,maxslope_limit], [0,max(histxy[0])], \":r\")\n",
+    "axes2.text(maxslope_limit*0.95, max(histxy[0]), str(round(len([i for i,x in enumerate(linkmaxslopes) if (x < maxslope_limit)])/len(linkmaxslopes)*100)) + \"%\", horizontalalignment='right', verticalalignment='top')\n",
+    "axes2.text(maxslope_limit*1.05, max(histxy[0]), str(round(len([i for i,x in enumerate(linkmaxslopes) if (x >= maxslope_limit)])/len(linkmaxslopes)*100)) + \"%\", horizontalalignment='left', verticalalignment='top', color=\"red\")\n",
+    "axes2.set_xlabel('Max slope [%]')\n",
+    "axes2.set_ylabel('')\n",
+    "axes2.set_title('Link max slopes');\n",
+    "\n",
+    "fig.savefig(PATH[\"plot\"] + \"linkstats\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ac5fd620",
+   "id": "9ca75720",
    "metadata": {},
    "source": [
     "### Loop lengths"
@@ -650,34 +680,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d6af5d6",
+   "id": "4a271424",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(8, 3))\n",
-    "axes1 = fig.add_axes([0.1, 0.1, 0.35, 0.8])\n",
-    "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
+    "axes1 = fig.add_axes([0.08, 0.16, 0.4, 0.75])\n",
+    "axes2 = fig.add_axes([0.58, 0.16, 0.4, 0.75])\n",
     "\n",
-    "histxy = axes1.hist([c[\"length\"] for c in loopbasis.values()], density=False)\n",
+    "facelooplengths = [c[\"length\"] for c in loopbasis.values()]\n",
+    "\n",
+    "histxy = axes1.hist(facelooplengths, density=False)\n",
     "axes1.set_xlabel('Length [m]')\n",
     "axes1.set_ylabel('Frequency')\n",
     "axes1.set_title('Face loop lengths')\n",
     "axes1.plot([faceloop_limit[0],faceloop_limit[0]], [0,max(histxy[0])], \":k\")\n",
-    "axes1.plot([faceloop_limit[1],faceloop_limit[1]], [0,max(histxy[0])], \":k\")\n",
-    "massinallowedrange = round(sum(histxy[0][-6:])/sum(histxy[0][:])*100) # Should be 90%\n",
-    "axes1.text((faceloop_limit[0]+faceloop_limit[1])/2, max(histxy[0]), str(massinallowedrange) + \"%\", horizontalalignment='center', verticalalignment='top')\n",
+    "axes1.plot([faceloop_limit[1],faceloop_limit[1]], [0,max(histxy[0])], \":r\")\n",
+    "axes1.text((faceloop_limit[0]+faceloop_limit[1])/2, max(histxy[0]), str(round(len([i for i,x in enumerate(facelooplengths) if (x >= faceloop_limit[0] and x <= faceloop_limit[1])])/len(facelooplengths)*100)) + \"%\", horizontalalignment='center', verticalalignment='top')\n",
+    "axes1.text(faceloop_limit[0]*0.95, max(histxy[0]), str(round(len([i for i,x in enumerate(facelooplengths) if (x < faceloop_limit[0])])/len(facelooplengths)*100)) + \"%\", horizontalalignment='right', verticalalignment='top')\n",
+    "axes1.text(faceloop_limit[1]*1.01, max(histxy[0]), str(round(len([i for i,x in enumerate(facelooplengths) if (x > faceloop_limit[1])])/len(facelooplengths)*100)) + \"%\", horizontalalignment='left', verticalalignment='top', color=\"red\")\n",
     "\n",
-    "axes2.hist([c[\"numnodes\"] for c in loopbasis.values()], density=False, bins=list(range(loop_numnode_bound+1)))\n",
+    "axes2.hist([c[\"numnodes\"] for c in loopbasis.values()], density=False)\n",
     "axes2.set_xlabel('Nodes')\n",
-    "axes2.set_title('Nodes per face loop');"
+    "axes2.set_title('Face loop nodes');\n",
+    "\n",
+    "fig.savefig(PATH[\"plot\"] + \"faceloopstats\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13df0411",
+   "id": "0fa9f01c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histxy[0][min(indcond):max(indcond)+1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d01970c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36b875c8",
+   "id": "9dc342eb",
    "metadata": {
     "scrolled": true
    },
