Load POIs and calculate loop water profiles

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-02-16  "
+    "Last modified: 2024-02-19  "
    ]
   },
   {
@@ -36,6 +36,7 @@
    "metadata": {},
    "source": [
     "* Double-check loop/link lengths. For example 3-loop east of Faxe\n",
+    "* Snap POIs to the original link geometries, within some threshold\n",
     "* X Incorporate gradients\n",
     "* X Add loop permutations for node-based analysis\n",
     "* X Drop non-main nodes\n",
@@ -64,7 +65,8 @@
     "maxslope_limit = 6\n",
     "\n",
     "PATH = {\n",
-    "    \"data_in\": \"../data/input/faxe/network/\",\n",
+    "    \"data_in_network\": \"../data/input/faxe/network/\",\n",
+    "    \"data_in_pois\": \"../data/input/faxe/pois/\",\n",
     "    \"data_out\": \"../data/processed/faxe/\",\n",
     "    \"plot\": \"../plots/faxe/\"\n",
     "}"
@@ -91,7 +93,8 @@
     "import numpy as np\n",
     "import networkx as nx\n",
     "from functools import reduce\n",
-    "import pickle "
+    "import pickle \n",
+    "from random import seed, random"
    ]
   },
   {
@@ -141,7 +144,19 @@
     "    cl = len(c)\n",
     "    for i in range(cl):\n",
     "        ms = max([ms, Gnx[c[i%cl]][c[(i+1)%cl]][\"max_slope\"]])\n",
-    "    return ms"
+    "    return ms\n",
+    "\n",
+    "def getLoopWaterProfile(c):\n",
+    "    wp = tuple()\n",
+    "    cl = len(c)\n",
+    "    l = 0\n",
+    "    for i in range(cl):\n",
+    "        l_this = Gnx[c[i%cl]][c[(i+1)%cl]][\"weight\"]\n",
+    "        l += l_this\n",
+    "        if Gnx[c[i%cl]][c[(i+1)%cl]][\"has_water\"]: # If link has water, assume it is half the link length in\n",
+    "            wp += (l+l_this/2,)\n",
+    "            l = l_this/2\n",
+    "    return wp"
    ]
   },
   {
@@ -167,8 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edges = gpd.read_file(PATH['data_in'] + 'edges_slope.gpkg')\n",
-    "nodes = gpd.read_file(PATH['data_in'] + 'nodes_edges_parallel.gpkg')\n",
+    "edges = gpd.read_file(PATH['data_in_network'] + 'edges_slope.gpkg')\n",
+    "nodes = gpd.read_file(PATH['data_in_network'] + 'nodes_edges_parallel.gpkg')\n",
     "# Set CRS\n",
     "edges.set_crs('epsg:25832')\n",
     "nodes.set_crs('epsg:25832');"
@@ -335,9 +350,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "89a09ffc",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
@@ -403,11 +416,103 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5ccfbc29",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
     "plotCheck(G, nodes_id, nodes_coords);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "127f6847-e27e-47c1-9417-23ebd4436993",
+   "metadata": {},
+   "source": [
+    "### Add POIs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e2bbc07-b6bd-4b60-8ada-35f44bdd5d4d",
+   "metadata": {},
+   "source": [
+    "Snap POIs to network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2886934-6313-4aaa-a057-dce9e1896920",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "facilities = gpd.read_file(PATH['data_in_pois'] + 'facilities_within_reach_100.gpkg')\n",
+    "# facilities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec614f42-4d52-44d1-8dfb-248e4fdf99b4",
+   "metadata": {},
+   "source": [
+    "# ! To do: Snap points to the original link geometries, within some threshold !"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b2bfa30-6686-4a39-86f3-8b21f5137be4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48f4e33d-1765-4e46-b4c1-5f4ed7d3fe52",
+   "metadata": {},
+   "source": [
+    "To move on with development and testing, let's randomly populate the graph with a new edge property has_water"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f35925f-5f39-47c8-89f8-5efb12287e6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed(10)\n",
+    "for e in G.es:\n",
+    "    e[\"has_water\"] = True if random() < 0.1 else False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6714b0a9-6505-47d6-ae5d-f6a22f485039",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_colors = []\n",
+    "for e in G.es:\n",
+    "    if e[\"has_water\"]:\n",
+    "        edge_colors.append(\"blue\")\n",
+    "    else:\n",
+    "        edge_colors.append(\"grey\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5ccd77d-bc5e-4ce1-8263-819b604f6543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=7, edge_color=edge_colors)\n",
+    "plt.text(0,0.04, \"Water links highlighted\");\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -440,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c4bc2c4",
+   "id": "39e8e8e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd00d12d",
+   "id": "130f7f0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +589,7 @@
    "id": "8b714ef4",
    "metadata": {},
    "source": [
-    "It has been implemented in networkX though: https://networkx.org/documentation/stable/reference/algorithms/generated/networkx.algorithms.loops.simple_loops.html#networkx.algorithms.loops.simple_loops"
+    "It has been implemented in networkX though: https://networkx.org/documentation/stable/reference/algorithms/generated/networkx.algorithms.cycles.simple_cycles.html#networkx.algorithms.cycles.simple_cycles"
    ]
   },
   {
@@ -520,6 +625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get all unique loops, meaning a loop ABCA is counted only once and not as ABCA, BCAB, and CABC\n",
     "allloops_unique = {}\n",
     "nodes_done = set()\n",
     "numloops_unique = 0\n",
@@ -528,14 +634,16 @@
     "    sourcenode = c[0]\n",
     "    c_length = getLoopLength(c)\n",
     "    c_max_slope = getLoopMaxSlope(c)\n",
+    "    c_water = getLoopWaterProfile(c)\n",
     "    numloops_unique += 1\n",
     "    if sourcenode in nodes_done:\n",
     "        allloops_unique[sourcenode][\"loops\"].append(c)\n",
     "        allloops_unique[sourcenode][\"lengths\"].append(c_length)\n",
     "        allloops_unique[sourcenode][\"numnodes\"].append(len(c))\n",
     "        allloops_unique[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
+    "        allloops_unique[sourcenode][\"water_profile\"].append(c_water)\n",
     "    else:\n",
-    "        allloops_unique[sourcenode] = {\"loops\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)], \"max_slopes\": [c_max_slope]}\n",
+    "        allloops_unique[sourcenode] = {\"loops\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)], \"max_slopes\": [c_max_slope], \"water_profile\": [c_water]}\n",
     "        nodes_done.add(sourcenode)\n",
     "print(\"Found \" + str(numloops_unique) + \" unique loops for length bound \" + str(loop_numnode_bound))"
    ]
@@ -547,6 +655,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get all loops, meaning a loop ABCA is counted also as ABCA, BCAB, and CABC\n",
     "allloops = {}\n",
     "nodes_done = set()\n",
     "numloops = 0\n",
@@ -555,6 +664,7 @@
     "    sourcenode = c[0]\n",
     "    c_length = getLoopLength(c)\n",
     "    c_max_slope = getLoopMaxSlope(c)\n",
+    "    c_water = getLoopWaterProfile(c)\n",
     "    for sourcenode in c:\n",
     "        numloops += 1\n",
     "        if sourcenode in nodes_done:\n",
@@ -562,8 +672,9 @@
     "            allloops[sourcenode][\"lengths\"].append(c_length)\n",
     "            allloops[sourcenode][\"numnodes\"].append(len(c))\n",
     "            allloops[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
+    "            allloops[sourcenode][\"water_profile\"].append(c_water)\n",
     "        else:\n",
-    "            allloops[sourcenode] = {\"loops\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)], \"max_slopes\": [c_max_slope]}\n",
+    "            allloops[sourcenode] = {\"loops\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)], \"max_slopes\": [c_max_slope], \"water_profile\": [c_water]}\n",
     "            nodes_done.add(sourcenode)\n",
     "print(\"Found \" + str(numloops) + \" loops for length bound \" + str(loop_numnode_bound))"
    ]
@@ -589,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b16df803",
+   "id": "2881540e",
    "metadata": {},
    "source": [
     "## Descriptive network statistics"
@@ -597,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7176d2b1",
+   "id": "233b978f",
    "metadata": {},
    "source": [
     "### Link lengths and max slopes"
@@ -606,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "225563eb",
+   "id": "d152ad9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ca75720",
+   "id": "740567f2",
    "metadata": {},
    "source": [
     "### Loop lengths"
@@ -680,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a271424",
+   "id": "9ec8a657",
    "metadata": {
     "scrolled": true
    },
@@ -712,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fa9f01c",
+   "id": "703c4c3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d01970c7",
+   "id": "24697b11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dc342eb",
+   "id": "33fdb5b2",
    "metadata": {
     "scrolled": true
    },
