--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-02-16  "
+    "Last modified: 2024-02-19  "
    ]
   },
   {
@@ -29,12 +29,6 @@
    "source": [
     "## To do"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5faeedc4",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -52,14 +46,15 @@
    "outputs": [],
    "source": [
     "loop_numnode_bound = 30\n",
-    "scenario = \"scenario2\"\n",
+    "scenario = \"scenario1\"\n",
     "\n",
     "restrictions = {\"scenario1\": {\"looplengthmin\": 5000, \"looplengthmax\": 20000, \"maxslope\": 4}, # family with small children\n",
     "                \"scenario2\": {\"looplengthmin\": 10000, \"looplengthmax\": 40000, \"maxslope\": 6} # teenage/adult leisure cyclist\n",
     "                }\n",
     "\n",
     "PATH = {\n",
-    "    \"data_in\": \"../data/input/faxe/network/\",\n",
+    "    \"data_in_network\": \"../data/input/faxe/network/\",\n",
+    "    \"data_in_pois\": \"../data/input/faxe/pois/\",\n",
     "    \"data_out\": \"../data/processed/faxe/\",\n",
     "    \"plot\": \"../plots/faxe/\"\n",
     "}"
@@ -87,7 +82,8 @@
     "import networkx as nx\n",
     "from functools import reduce\n",
     "import pickle \n",
-    "from itertools import compress"
+    "from itertools import compress\n",
+    "from random import seed, random"
    ]
   },
   {
@@ -210,7 +206,7 @@
    "id": "fedbbbd0",
    "metadata": {},
    "source": [
-    "## Restrict to length bounds"
+    "### Restrict to length bounds"
    ]
   },
   {
@@ -276,7 +272,7 @@
    "id": "ab5423e1",
    "metadata": {},
    "source": [
-    "## Restrict to acceptable gradients"
+    "### Restrict to acceptable gradients"
    ]
   },
   {
