Refactor functions via functions.py

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -108,55 +108,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a407c7e",
+   "id": "54eee093-c956-4804-8add-6a4f41a86cb9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def NormalizeData(data):\n",
-    "    return list((data - np.min(data)) / (np.max(data) - np.min(data)))\n",
-    "\n",
-    "def getLayout(G, nodes_id, nodes_coords):\n",
-    "    named_vertex_list = G.vs()[\"name\"]\n",
-    "    layout = []\n",
-    "    for n in named_vertex_list:\n",
-    "        pos = nodes_id.index(n)\n",
-    "        layout.append(nodes_coords[pos])\n",
-    "    return layout\n",
-    "\n",
-    "def plotCheck(G, nodes_id, nodes_coords, vertex_size = 7, edge_color=None):\n",
-    "    fig, ax = plt.subplots()\n",
-    "    layout = getLayout(G, nodes_id, nodes_coords)\n",
-    "    if edge_color is None:\n",
-    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout, vertex_color=\"green\");\n",
-    "    else:\n",
-    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout, edge_color=edge_color, vertex_color=\"green\");\n",
-    "    return fig\n",
-    "    \n",
-    "def getLoopLength(c):\n",
-    "    l = 0\n",
-    "    cl = len(c)\n",
-    "    for i in range(cl):\n",
-    "        l += Gnx[c[i%cl]][c[(i+1)%cl]][\"weight\"]\n",
-    "    return l\n",
-    "\n",
-    "def getLoopMaxSlope(c):\n",
-    "    ms = 0\n",
-    "    cl = len(c)\n",
-    "    for i in range(cl):\n",
-    "        ms = max([ms, Gnx[c[i%cl]][c[(i+1)%cl]][\"max_slope\"]])\n",
-    "    return ms\n",
-    "\n",
-    "def getLoopWaterProfile(c):\n",
-    "    wp = tuple()\n",
-    "    cl = len(c)\n",
-    "    l = 0\n",
-    "    for i in range(cl):\n",
-    "        l_this = Gnx[c[i%cl]][c[(i+1)%cl]][\"weight\"]\n",
-    "        l += l_this\n",
-    "        if Gnx[c[i%cl]][c[(i+1)%cl]][\"has_water\"]: # If link has water, assume it is half the link length in\n",
-    "            wp += (l+l_this/2,)\n",
-    "            l = l_this/2\n",
-    "    return wp"
+    "%run -i functions.py"
    ]
   },
   {
