--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -48,8 +48,8 @@
     "loop_numnode_bound = 30\n",
     "scenario = \"scenario1\"\n",
     "\n",
-    "restrictions = {\"scenario1\": {\"looplengthmin\": 5000, \"looplengthmax\": 20000, \"maxslope\": 4}, # family with small children\n",
-    "                \"scenario2\": {\"looplengthmin\": 10000, \"looplengthmax\": 40000, \"maxslope\": 6} # teenage/adult leisure cyclist\n",
+    "restrictions = {\"scenario1\": {\"looplengthmin\": 5000, \"looplengthmax\": 20000, \"maxslope\": 4, \"waterlengthmax\": 10000}, # family with small children\n",
+    "                \"scenario2\": {\"looplengthmin\": 10000, \"looplengthmax\": 40000, \"maxslope\": 6, \"waterlengthmax\": 10000} # teenage/adult leisure cyclist\n",
     "                }\n",
     "\n",
     "PATH = {\n",
@@ -101,32 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def NormalizeData(data):\n",
-    "    return list((data - np.min(data)) / (np.max(data) - np.min(data)))\n",
-    "\n",
-    "def getLayout(G, nodes_id, nodes_coords):\n",
-    "    named_vertex_list = G.vs()[\"name\"]\n",
-    "    layout = []\n",
-    "    for n in named_vertex_list:\n",
-    "        pos = nodes_id.index(n)\n",
-    "        layout.append(nodes_coords[pos])\n",
-    "    return layout\n",
-    "\n",
-    "def plotCheck(G, nodes_id, nodes_coords, vertex_size=7, edge_color=None):\n",
-    "    fig, ax = plt.subplots()\n",
-    "    layout = getLayout(G, nodes_id, nodes_coords)\n",
-    "    if edge_color is None:\n",
-    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout, vertex_color=\"green\");\n",
-    "    else:\n",
-    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout, edge_color=edge_color, vertex_color=\"green\");\n",
-    "    return fig\n",
-    "    \n",
-    "def getLoopLength(c):\n",
-    "    l = 0\n",
-    "    cl = len(c)\n",
-    "    for i in range(cl):\n",
-    "        l += Gnx[c[i%cl]][c[(i+1)%cl]][\"weight\"]\n",
-    "    return l"
+    "%run -i functions.py"
    ]
   },
   {
