Add water profile analysis (on synthetic data)

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "* Double-check loop/link lengths. For example 3-loop east of Faxe\n",
-    "* Snap POIs to the original link geometries, within some threshold\n",
+    "* Snap POIs to the original link geometries, within a threshold\n",
     "* X Incorporate gradients\n",
     "* X Add loop permutations for node-based analysis\n",
     "* X Drop non-main nodes\n",
