--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -32,6 +32,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "227bd0ed-046a-4652-9df6-4980654b4565",
+   "metadata": {},
+   "source": [
+    "* POI analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c3308b0",
    "metadata": {},
    "source": [
@@ -46,7 +54,7 @@
    "outputs": [],
    "source": [
     "loop_numnode_bound = 30\n",
-    "scenario = \"scenario1\"\n",
+    "scenario = \"scenario2\"\n",
     "\n",
     "restrictions = {\"scenario1\": {\"looplengthmin\": 5000, \"looplengthmax\": 20000, \"maxslope\": 4, \"waterlengthmax\": 10000}, # family with small children\n",
     "                \"scenario2\": {\"looplengthmin\": 10000, \"looplengthmax\": 40000, \"maxslope\": 6, \"waterlengthmax\": 10000} # teenage/adult leisure cyclist\n",
@@ -205,7 +213,8 @@
     "    mask_this = (this_lengths >= restrictions[scenario][\"looplengthmin\"]) & (this_lengths <= restrictions[scenario][\"looplengthmax\"])\n",
     "    allloops_bound[sourcenode] = {\"loops\": list(compress(allloops[sourcenode]['loops'], mask_this)),\n",
     "                                   \"lengths\": list(compress(allloops[sourcenode]['lengths'], mask_this)),\n",
-    "                                   \"numnodes\": list(compress(allloops[sourcenode]['numnodes'], mask_this))}"
+    "                                   \"numnodes\": list(compress(allloops[sourcenode]['numnodes'], mask_this)),\n",
+    "                                   \"water_profile\": list(compress(allloops[sourcenode]['water_profile'], mask_this))}"
    ]
   },
   {
@@ -266,7 +275,8 @@
     "    mask_this &= (this_maxslopes <= restrictions[scenario][\"maxslope\"])\n",
     "    allloops_bound[sourcenode] = {\"loops\": list(compress(allloops[sourcenode]['loops'], mask_this)),\n",
     "                                   \"lengths\": list(compress(allloops[sourcenode]['lengths'], mask_this)),\n",
-    "                                   \"numnodes\": list(compress(allloops[sourcenode]['numnodes'], mask_this))}"
+    "                                   \"numnodes\": list(compress(allloops[sourcenode]['numnodes'], mask_this)),\n",
+    "                                   \"water_profile\": list(compress(allloops[sourcenode]['water_profile'], mask_this))}"
    ]
   },
   {
@@ -304,6 +314,7 @@
    "outputs": [],
    "source": [
     "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=vertex_sizes, edge_color=edge_colors)\n",
+    "plt.text(0,0.12, \"Red: Gradient >\"+ str(restrictions[scenario][\"maxslope\"])+\"%\", fontsize=8);\n",
     "plt.text(0,0.04, \"Max # of loops: \" + str(numloops_max));\n",
     "plt.tight_layout()"
    ]
@@ -316,6 +327,101 @@
    "outputs": [],
    "source": [
     "fig.savefig(PATH[\"plot\"] + \"network_numloops_\"+str(restrictions[scenario][\"looplengthmin\"])+\"to\"+str(restrictions[scenario][\"looplengthmax\"])+\"_maxslope\"+str(restrictions[scenario][\"maxslope\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccef1cf2-5799-4462-8449-08e573ee1bce",
+   "metadata": {},
+   "source": [
+    "### Restrict to POI limits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96e97a2c-8f9f-4b08-918a-fd25151f5826",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allloops_bound_watered = {}\n",
+    "for sourcenode in allloops_bound: \n",
+    "    numloops = len(allloops_bound[sourcenode][\"loops\"])\n",
+    "    mask_this = [True] * numloops\n",
+    "    for i in range(numloops):\n",
+    "        wp = allloops_bound[sourcenode][\"water_profile\"][i]\n",
+    "        water_enough = True\n",
+    "        if wp: # There is water on the way somewhere. Check distances\n",
+    "            for w in wp:\n",
+    "                if w > restrictions[scenario][\"waterlengthmax\"]:\n",
+    "                    water_enough = False\n",
+    "                    break\n",
+    "            if water_enough and (allloops_bound[sourcenode][\"lengths\"][i] - wp[-1] > restrictions[scenario][\"waterlengthmax\"]):\n",
+    "                water_enough = False\n",
+    "        else: # No water on the way, so the loop is only valid if short enough\n",
+    "            if allloops_bound[sourcenode][\"lengths\"][i] > restrictions[scenario][\"waterlengthmax\"]:\n",
+    "                water_enough = False\n",
+    "        mask_this[i] = water_enough\n",
+    "    allloops_bound_watered[sourcenode] = {\"loops\": list(compress(allloops_bound[sourcenode]['loops'], mask_this)),\n",
+    "                                   \"lengths\": list(compress(allloops_bound[sourcenode]['lengths'], mask_this)),\n",
+    "                                   \"numnodes\": list(compress(allloops_bound[sourcenode]['numnodes'], mask_this)),\n",
+    "                                   \"water_profile\": list(compress(allloops_bound[sourcenode]['water_profile'], mask_this))}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "129bfa04-bb31-4232-9227-d413da2ac6a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vertex_sizes=[len(allloops_bound_watered[k]['loops']) for k in range(len(allloops_bound.keys()))]\n",
+    "numloops_max = max(vertex_sizes)\n",
+    "vertex_sizes = [i/(numloops_max/20) for i in vertex_sizes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8bccf25-5a1a-405f-941b-63a32d7731fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_colors = []\n",
+    "for e in G.es:\n",
+    "    if e[\"max_slope\"] > restrictions[scenario][\"maxslope\"]:# and not e[\"has_water\"]:\n",
+    "        edge_colors.append(\"red\")\n",
+    "    # elif e[\"max_slope\"] > restrictions[scenario][\"maxslope\"] and e[\"has_water\"]:\n",
+    "    #     edge_colors.append(\"orange\")\n",
+    "    elif e[\"max_slope\"] <= restrictions[scenario][\"maxslope\"] and e[\"has_water\"]:\n",
+    "        edge_colors.append(\"blue\")\n",
+    "    else:\n",
+    "        edge_colors.append(\"grey\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46ebeaf5-8874-4704-a0e4-11386fb044ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=vertex_sizes, edge_color=edge_colors)\n",
+    "plt.text(0,0.17, \"Blue: Gradient <=\"+ str(restrictions[scenario][\"maxslope\"])+\"% and water\", fontsize=8);\n",
+    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(restrictions[scenario][\"maxslope\"])+\"% and water\", fontsize=8);\n",
+    "plt.text(0,0.12, \"Red: Gradient >\"+ str(restrictions[scenario][\"maxslope\"])+\"%\", fontsize=8);\n",
+    "plt.text(0,0.04, \"Max # of loops: \" + str(numloops_max));\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2e34112-f6ac-46a0-acba-79e9135493ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.savefig(PATH[\"plot\"] + \"network_numloops_\"+str(restrictions[scenario][\"looplengthmin\"])+\"to\"+str(restrictions[scenario][\"looplengthmax\"])+\"_maxslope\"+str(restrictions[scenario][\"maxslope\"])+\"_waterlengthmax\"+str(restrictions[scenario][\"waterlengthmax\"]))"
    ]
   }
  ],
