Snap POIs to the original link geometries

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -36,7 +36,8 @@
    "metadata": {},
    "source": [
     "* Double-check loop/link lengths. For example 3-loop east of Faxe\n",
-    "* Snap POIs to the original link geometries, within a threshold\n",
+    "* Double-check edge_ids during simplifications\n",
+    "* X Snap POIs to the original link geometries, within a threshold\n",
     "* X Incorporate gradients\n",
     "* X Add loop permutations for node-based analysis\n",
     "* X Drop non-main nodes\n",
@@ -63,6 +64,7 @@
     "faceloop_limit = [15000,30000]  # 90% of face loop lengths should conform to these length limits [m]\n",
     "link_limit = [1000,5000,10000] # Optimal length between first and second value, maximal length the last value\n",
     "maxslope_limit = 6\n",
+    "snap_threshold = 100  # Threshold to snap POIs to network links [m]\n",
     "\n",
     "PATH = {\n",
     "    \"data_in_network\": \"../data/input/faxe/network/\",\n",
@@ -139,6 +141,7 @@
    "outputs": [],
    "source": [
     "edges = gpd.read_file(PATH['data_in_network'] + 'edges_slope.gpkg')\n",
+    "edges_orig = edges # Make a deep copy to save the geometries\n",
     "nodes = gpd.read_file(PATH['data_in_network'] + 'nodes_edges_parallel.gpkg')\n",
     "# Set CRS\n",
     "edges.set_crs('epsg:25832')\n",
@@ -188,13 +191,14 @@
     "# Rename length to weight for igraph\n",
     "edges = edges.rename(columns={\"length\": \"weight\"})\n",
     "# Drop unused columns\n",
-    "used_columns = {\"u\":(), \"v\":(), \"weight\":(), \"max_slope\":()}\n",
+    "used_columns = {\"u\":(), \"v\":(), \"weight\":(), \"max_slope\":(), \"edge_id\":()}\n",
     "for c_name, _ in edges.items():\n",
     "    if c_name not in used_columns:\n",
     "        del edges[c_name]\n",
     "\n",
     "# Reorder columns\n",
-    "edges = edges[['u','v','weight','max_slope']]"
+    "edges = edges[['u','v','weight','max_slope','edge_id']]\n",
+    "edges"
    ]
   },
   {
@@ -212,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = ig.Graph.TupleList(edges.itertuples(index=False), directed=False, weights=False, edge_attrs = ['weight', 'max_slope'])"
+    "G = ig.Graph.TupleList(edges.itertuples(index=False), directed=False, weights=False, edge_attrs = ['weight', 'max_slope', 'edge_id'])"
    ]
   },
   {
@@ -259,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G.simplify(multiple=True, loops=True, combine_edges=dict(weight=min, max_slope=max));"
+    "G.simplify(multiple=True, loops=True, combine_edges=dict(weight=min, max_slope=max, edge_id=min));"
    ]
   },
   {
@@ -365,7 +369,7 @@
     "G.delete_vertices(to_delete_ids)\n",
     "\n",
     "# Re-simplify\n",
-    "G.simplify(multiple=True, loops=True, combine_edges=dict(weight=min, max_slope=max));"
+    "G.simplify(multiple=True, loops=True, combine_edges=dict(weight=min, max_slope=max, edge_id=min));"
    ]
   },
   {
@@ -405,15 +409,15 @@
    "outputs": [],
    "source": [
     "facilities = gpd.read_file(PATH['data_in_pois'] + 'facilities_within_reach_100.gpkg')\n",
-    "# facilities"
+    "facilities"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ec614f42-4d52-44d1-8dfb-248e4fdf99b4",
+   "id": "5f3760a9-efb8-4d37-bdee-25d2b7d75eeb",
    "metadata": {},
    "source": [
-    "# ! To do: Snap points to the original link geometries, within some threshold !"
+    "We just have a relatively small number of facilities and links, so it should be fine to just loop through all pairwise"
    ]
   },
   {
@@ -422,14 +426,28 @@
    "id": "8b2bfa30-6686-4a39-86f3-8b21f5137be4",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "48f4e33d-1765-4e46-b4c1-5f4ed7d3fe52",
-   "metadata": {},
    "source": [
-    "To move on with development and testing, let's randomly populate the graph with a new edge property has_water"
+    "for e in G.es:\n",
+    "    e[\"has_water\"] = False\n",
+    "    \n",
+    "e_haswater = set()\n",
+    "for findex, frow in facilities.iterrows():\n",
+    "    d = 999999999999\n",
+    "    eid = False\n",
+    "    if frow['type']: # Can add conditions on type later\n",
+    "        poi_this = frow['geometry']\n",
+    "        for eindex, erow in edges_orig.iterrows(): \n",
+    "            d_this = poi_this.distance(erow['geometry'])\n",
+    "            if d_this < d and erow['edge_id'] in edges_orig['edge_id'].values:\n",
+    "                d = d_this\n",
+    "                eid = erow['edge_id']\n",
+    "    if eid and d <= snap_threshold:\n",
+    "        e_haswater.add(eid)\n",
+    "        \n",
+    "for e in G.es:\n",
+    "    if e[\"edge_id\"] in e_haswater:\n",
+    "        e[\"has_water\"] = True\n",
+    "        "
    ]
   },
   {
@@ -439,9 +457,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seed(10)\n",
-    "for e in G.es:\n",
-    "    e[\"has_water\"] = True if random() < 0.1 else False"
+    "# Alternatively, for testing, we could randomly populate the graph with a new edge property has_water\n",
+    "# seed(10)\n",
+    "# for e in G.es:\n",
+    "#     e[\"has_water\"] = True if random() < 0.1 else False"
    ]
   },
   {
