--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -418,7 +418,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b2e34112-f6ac-46a0-acba-79e9135493ac",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "fig.savefig(PATH[\"plot\"] + \"network_numloops_\"+str(restrictions[scenario][\"looplengthmin\"])+\"to\"+str(restrictions[scenario][\"looplengthmax\"])+\"_maxslope\"+str(restrictions[scenario][\"maxslope\"])+\"_waterlengthmax\"+str(restrictions[scenario][\"waterlengthmax\"]))"
