Do all snapping Python-side

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -64,7 +64,7 @@
     "faceloop_limit = [15000,30000]  # 90% of face loop lengths should conform to these length limits [m]\n",
     "link_limit = [1000,5000,10000] # Optimal length between first and second value, maximal length the last value\n",
     "maxslope_limit = 6\n",
-    "snap_threshold = 100  # Threshold to snap POIs to network links [m]\n",
+    "snap_threshold = 250  # Threshold to snap POIs to network links [m]\n",
     "\n",
     "PATH = {\n",
     "    \"data_in_network\": \"../data/input/faxe/network/\",\n",
@@ -402,22 +402,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2886934-6313-4aaa-a057-dce9e1896920",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "facilities = gpd.read_file(PATH['data_in_pois'] + 'facilities_within_reach_100.gpkg')\n",
-    "facilities"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5f3760a9-efb8-4d37-bdee-25d2b7d75eeb",
    "metadata": {},
    "source": [
     "We just have a relatively small number of facilities and links, so it should be fine to just loop through all pairwise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03e34624-bce4-4bd5-a5e3-93185b90a522",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "facility_file = [\"facilities_within_reach_100.gpkg\", \"facilities_outside_reach_100.gpkg\"]"
    ]
   },
   {
@@ -431,18 +430,20 @@
     "    e[\"has_water\"] = False\n",
     "    \n",
     "e_haswater = set()\n",
-    "for findex, frow in facilities.iterrows():\n",
-    "    d = 999999999999\n",
-    "    eid = False\n",
-    "    if frow['type']: # Can add conditions on type later\n",
-    "        poi_this = frow['geometry']\n",
-    "        for eindex, erow in edges_orig.iterrows(): \n",
-    "            d_this = poi_this.distance(erow['geometry'])\n",
-    "            if d_this < d and erow['edge_id'] in edges_orig['edge_id'].values:\n",
-    "                d = d_this\n",
-    "                eid = erow['edge_id']\n",
-    "    if eid and d <= snap_threshold:\n",
-    "        e_haswater.add(eid)\n",
+    "for f in [\"facilities_within_reach_100.gpkg\", \"facilities_outside_reach_100.gpkg\"]:\n",
+    "    facilities = gpd.read_file(PATH['data_in_pois'] + f)\n",
+    "    for findex, frow in facilities.iterrows():\n",
+    "        d = 999999999999\n",
+    "        eid = False\n",
+    "        if frow['type']: # Can add conditions on type later\n",
+    "            poi_this = frow['geometry']\n",
+    "            for eindex, erow in edges_orig.iterrows(): \n",
+    "                d_this = poi_this.distance(erow['geometry'])\n",
+    "                if d_this < d and erow['edge_id'] in edges_orig['edge_id'].values:\n",
+    "                    d = d_this\n",
+    "                    eid = erow['edge_id']\n",
+    "        if eid and d <= snap_threshold:\n",
+    "            e_haswater.add(eid)\n",
     "        \n",
     "for e in G.es:\n",
     "    if e[\"edge_id\"] in e_haswater:\n",
